objects/UNITY_Proposal__c.object
<CustomObject>
    <description>UNITY object</description>
    <fields>
        <fullName>Quote_Approved_Date__c</fullName>
        <description>Latest date a quote was approved</description>
        <label>Quote Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quote_Margin_Calculation__c</fullName>
        <description>This field gives a breakdown of how the Quote Margin is calculated.</description>
        <formula>IF( RecordType.DeveloperName = &apos;Master_Quote&apos;,&apos;Revenue ((&apos;+TEXT(UNITY_Total_Revenue__c)+&apos;) - (Total Cost(&apos;+TEXT(UNITY_Master_Quote_Total_Cost__c)+&apos;) + Incurred Cost(&apos;+TEXT(UNITY_Incurred_Cost__c)+&apos;))&apos;+BR() + &apos; / Revenue (&apos;+TEXT(UNITY_Total_Revenue__c)+&apos;)) = &apos; + 
TEXT( ROUND(UNITY_Total_Quote_Margin__c,4)) ,&apos;Only valid on Master Quotes.&apos; )</formula>
        <inlineHelpText>This field gives a breakdown of how the Quote Margin is calculated.</inlineHelpText>
        <label>Quote Margin Calculation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Submitted_Date__c</fullName>
        <description>Earliest date a quote was submitted</description>
        <label>Quote Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UNITY_48_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>48 Hours Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds Agent Information working on the Case</description>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Business_Unit_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Business Unit Account)</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Craft</fullName>
                </value>
                <value>
                    <fullName>MNS</fullName>
                </value>
                <value>
                    <fullName>MSP Atlanta</fullName>
                </value>
                <value>
                    <fullName>MSP Dallas</fullName>
                </value>
                <value>
                    <fullName>MSP El Paso</fullName>
                </value>
                <value>
                    <fullName>MSP Houston</fullName>
                </value>
                <value>
                    <fullName>MSP Jacksonville</fullName>
                </value>
                <value>
                    <fullName>MSP Memphis</fullName>
                </value>
                <value>
                    <fullName>MSP Miami</fullName>
                </value>
                <value>
                    <fullName>MSP Nashville</fullName>
                </value>
                <value>
                    <fullName>MSP New Orleans</fullName>
                </value>
                <value>
                    <fullName>MSP Orlando</fullName>
                </value>
                <value>
                    <fullName>MSP Phoenix</fullName>
                </value>
                <value>
                    <fullName>MSP San Antonio</fullName>
                </value>
                <value>
                    <fullName>MSP Tampa</fullName>
                </value>
                <value>
                    <fullName>NSBS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Case_Thread_ID__c</fullName>
        <formula>&quot;ref:_&quot;&amp;LEFT( $Organization.Id,5)&amp;SUBSTITUTE(RIGHT($Organization.Id,10),&quot;0&quot;,&quot;&quot;)&amp;&quot;._&quot;&amp;LEFT( UNITY_Case__r.Id ,5)&amp;SUBSTITUTE(LEFT(RIGHT(UNITY_Case__r.Id,10),5),&quot;0&quot;,&quot;&quot;)&amp;RIGHT(UNITY_Case__r.Id,5)&amp;&quot;:ref&quot;</formula>
        <label>Case Thread ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Comments__c</fullName>
        <description>Comments to be added on Proposal Accept/Reject</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UNITY_Customer_Email__c</fullName>
        <description>Populates Contact Email from the Case through the Process Builder</description>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>UNITY_Customer_Margin__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Customer Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UNITY_Customer_PIN__c</fullName>
        <formula>UNITY_Work_Order__r.UNITY_Customer_PIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer PIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Customer_PO__c</fullName>
        <formula>UNITY_Case__r.UNITY_Customer_PO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer PO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Customer_Provided_Quote_No_Reply__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provided Customer Quote, No Reply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Customer)</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_De_Escalate_Reason_No_Reply__c</fullName>
        <label>De-Escalate Reason (No Customer Reply)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Negotiating Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Discount_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Holds Discount % value</description>
        <label>Discount %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UNITY_Discounted_Service_Charge__c</fullName>
        <description>Service charge after applying discounts from POs or Quote</description>
        <inlineHelpText>Service charge after applying discounts from POs or Quote</inlineHelpText>
        <label>Discounted Service Charge</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Does_Discount_Amount_Exists__c</fullName>
        <label>Does Discount Amount Exists</label>
        <summarizedField>UNITY_Proposal_Line_Item__c.UNITY_Discount_Amount__c</summarizedField>
        <summaryForeignKey>UNITY_Proposal_Line_Item__c.UNITY_Proposal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UNITY_Effective_Till_Date__c</fullName>
        <label>Effective Till Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UNITY_Email_Logo_URL__c</fullName>
        <formula>UNITY_Case__r.UNITY_Email_Logo_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UNITY_Email_Logo_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Estimated_Incurred_Sales_Tax__c</fullName>
        <description>Estimated Sales Tax for incurred charges</description>
        <label>Estimated Incurred Sales Tax</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Estimated_Sales_Tax__c</fullName>
        <description>Rollup of sales tax in all lines</description>
        <label>Estimated Sales Tax</label>
        <summarizedField>UNITY_Proposal_Line_Item__c.UNITY_Sales_Tax__c</summarizedField>
        <summaryForeignKey>UNITY_Proposal_Line_Item__c.UNITY_Proposal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UNITY_Final_Price2__c</fullName>
        <description>Final Price with Adjustments (No Tax Included)</description>
        <formula>IF(
  AND(NOT(ISBLANK(UNITY_Discount__c)),UNITY_Discount__c&gt;0),
  (1-UNITY_Discount__c)*UNITY_Line_Item_Discounted_Price__c,
  IF(
    AND(NOT(ISBLANK(UNITY_Discount_Amount__c)),UNITY_Discount_Amount__c&gt;0),
    UNITY_Line_Item_Discounted_Price__c - UNITY_Discount_Amount__c,
    UNITY_Line_Item_Discounted_Price__c
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Final Price with Adjustments. No Tax</inlineHelpText>
        <label>Final Price (with Adjustments)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Final_Price__c</fullName>
        <description>This price includes Estimated Sales Tax and Discounted Price</description>
        <formula>IF(
  NOT(ISBLANK(UNITY_Discount_Amount__c)),
  (1-UNITY_Discount__c)*UNITY_Line_Item_Discounted_Price__c+UNITY_Estimated_Sales_Tax__c,
  IF(
    NOT(ISBLANK(UNITY_Discount_Amount__c)),
    UNITY_Line_Item_Discounted_Price__c - UNITY_Discount_Amount__c + UNITY_Estimated_Sales_Tax__c,
    UNITY_Line_Item_Discounted_Price__c + UNITY_Estimated_Sales_Tax__c
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Price (with Adjustments and Tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_HT_Warning__c</fullName>
        <formula>IF(OR(UNITY_Has_Cust_Holiday_Time__c &gt; 0,UNITY_Has_Vend_Holiday_Time__c &gt; 0), IMAGE(&apos;https://c.cs96.content.force.com/servlet/servlet.FileDownload?file=01531000007LmXX&apos;, &apos;HT Warning&apos;,16,24),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HT Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Has_Cust_Holiday_Time__c</fullName>
        <label>Has Cust Holiday Time</label>
        <summaryFilterItems>
            <field>UNITY_Proposal_Line_Item__c.UNITY_Customer_Holiday_Multiplier__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>UNITY_Proposal_Line_Item__c.UNITY_Activity_Type__c</field>
            <operation>contains</operation>
            <value>Labor,Travel</value>
        </summaryFilterItems>
        <summaryForeignKey>UNITY_Proposal_Line_Item__c.UNITY_Proposal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UNITY_Has_Cust_Overtime__c</fullName>
        <label>Has Cust Overtime</label>
        <summaryFilterItems>
            <field>UNITY_Proposal_Line_Item__c.UNITY_Customer_OT_Multiplier__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>UNITY_Proposal_Line_Item__c.UNITY_Activity_Type__c</field>
            <operation>contains</operation>
            <value>Labor,Travel</value>
        </summaryFilterItems>
        <summaryForeignKey>UNITY_Proposal_Line_Item__c.UNITY_Proposal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UNITY_Has_Pending_Approval_Sub_Quotes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>imaster quote with peding approval subquotes.</description>
        <label>Has Pending Approval Sub Quotes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Has_Vend_Holiday_Time__c</fullName>
        <label>Has Vend Holiday Time</label>
        <summaryFilterItems>
            <field>UNITY_Proposal_Line_Item__c.UNITY_Vendor_Holiday_Multiplier__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>UNITY_Proposal_Line_Item__c.UNITY_Activity_Type__c</field>
            <operation>contains</operation>
            <value>Labor,Travel</value>
        </summaryFilterItems>
        <summaryForeignKey>UNITY_Proposal_Line_Item__c.UNITY_Proposal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UNITY_Has_Vend_Overtime__c</fullName>
        <label>Has Vend Overtime</label>
        <summaryFilterItems>
            <field>UNITY_Proposal_Line_Item__c.UNITY_Vendor_OT_Multiplier__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>UNITY_Proposal_Line_Item__c.UNITY_Activity_Type__c</field>
            <operation>contains</operation>
            <value>Labor,Travel</value>
        </summaryFilterItems>
        <summaryForeignKey>UNITY_Proposal_Line_Item__c.UNITY_Proposal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UNITY_Include_Terms_and_Conditions__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Uncheck to remove the Terms &amp; Conditions section from the Quote PDF</description>
        <inlineHelpText>Uncheck to remove the Terms &amp; Conditions section from the Quote PDF</inlineHelpText>
        <label>Include Terms and Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Incurred_Charges__c</fullName>
        <label>Incurred Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Incurred_Cost__c</fullName>
        <label>Incurred Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Is_Vendor_Supply__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Vendor Supply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Line_Item_Count__c</fullName>
        <label>Line Item Count</label>
        <summaryForeignKey>UNITY_Proposal_Line_Item__c.UNITY_Proposal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UNITY_Line_Item_Discount_Exists__c</fullName>
        <description>To identify if line item discounts exist?</description>
        <label>Line Item Discount Exists ?</label>
        <summarizedField>UNITY_Proposal_Line_Item__c.UNITY_Discount__c</summarizedField>
        <summaryForeignKey>UNITY_Proposal_Line_Item__c.UNITY_Proposal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UNITY_Line_Item_Discount__c</fullName>
        <formula>OR (UNITY_Does_Discount_Amount_Exists__c &gt; 0, UNITY_Line_Item_Discount_Exists__c &gt; 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field is checked if Proposal Line Items include Discounts</inlineHelpText>
        <label>Line Item Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Line_Item_Discounted_Price__c</fullName>
        <label>Line Item Discounted Price</label>
        <summarizedField>UNITY_Proposal_Line_Item__c.UNITY_Discounted_Price__c</summarizedField>
        <summaryForeignKey>UNITY_Proposal_Line_Item__c.UNITY_Proposal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UNITY_Manager_Approved_Discounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Approved Discounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Master_PIN__c</fullName>
        <label>Master PIN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Master_Quote_Final_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quote Final Price (with Discounts)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Master_Quote_Margin_Amount__c</fullName>
        <formula>UNITY_Master_Quote_Total_Price__c + UNITY_Service_Charge__c - UNITY_Master_Quote_Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Quote Margin Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Master_Quote_Total_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Additional Work Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Master_Quote_Total_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quote Total Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Master_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Master Quote</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>UNITY_Proposal__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_OT_Warning__c</fullName>
        <formula>IF(OR(UNITY_Has_Cust_Overtime__c &gt; 0,UNITY_Has_Vend_Overtime__c &gt; 0), IMAGE(&apos;https://c.cs96.content.force.com/servlet/servlet.FileDownload?file=01531000007LmXY&apos;, &apos;OT Warning&apos;,16,24),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OT Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Originating_Usage_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Originating Usage Request</description>
        <label>Originating Usage Request</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Parts_Lead_Time__c</fullName>
        <description>Field to add specifics about when parts are expected to be sourced</description>
        <inlineHelpText>Field to add specifics about when parts are expected to be sourced</inlineHelpText>
        <label>Parts Lead Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Proposal_Comments__c</fullName>
        <label>Quote Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UNITY_Proposal_External_Id__c</fullName>
        <description>This field will contain unique record id from source system.</description>
        <externalId>true</externalId>
        <label>UNITY Proposal External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UNITY_Proposal_Status__c</fullName>
        <label>Quote Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Quote Creation</fullName>
                </value>
                <value>
                    <fullName>Agent Review Complete</fullName>
                </value>
                <value>
                    <fullName>Approved by Manager</fullName>
                </value>
                <value>
                    <fullName>Rejected by Manager</fullName>
                </value>
                <value>
                    <fullName>Quote Finalized</fullName>
                </value>
                <value>
                    <fullName>Ready to Send to Customer</fullName>
                </value>
                <value>
                    <fullName>Sent to Customer</fullName>
                </value>
                <value>
                    <fullName>Returned to Agent</fullName>
                </value>
                <value>
                    <fullName>Proposal Amended</fullName>
                </value>
                <value>
                    <fullName>Proposal Amended &amp; Sent to Customer</fullName>
                </value>
                <value>
                    <fullName>Pending Customer Review</fullName>
                </value>
                <value>
                    <fullName>Customer Approved</fullName>
                </value>
                <value>
                    <fullName>Customer Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Discount - Approved by Manager</fullName>
                </value>
                <value>
                    <fullName>Discount - Rejected by Manager</fullName>
                </value>
                <value>
                    <fullName>Proposal sent for Manager Approval</fullName>
                </value>
                <value>
                    <fullName>Ready to Send</fullName>
                </value>
                <value>
                    <fullName>Pending Manager Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Quote_Comments__c</fullName>
        <description>New Quote Comments field</description>
        <label>Quote Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UNITY_Quote_Margin_Amount__c</fullName>
        <formula>UNITY_Total_Price__c + UNITY_Service_Charge__c - UNITY_Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Margin Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Quote_Margin__c</fullName>
        <description>Calculates Margin %</description>
        <formula>UNITY_Quote_Margin_Amount__c / ( UNITY_Total_Price__c + UNITY_Service_Charge__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UNITY_Service_Charge_Tax__c</fullName>
        <description>Calculated tax for service charge</description>
        <label>Service Charge Tax</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Service_Charge__c</fullName>
        <description>Service Charge Amount in $</description>
        <label>Service Charge</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Shared_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared To</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Proposals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Shared_to_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Shared_to_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared to User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Proposals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Status__c</fullName>
        <label>Customer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Manager Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Tax_Process_Result__c</fullName>
        <description>The result of the avatax callout</description>
        <label>Tax Process Result</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UNITY_Tax_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to check when tax has been processed on the sub quote</description>
        <label>Tax Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Template_Config_Ext_ID__c</fullName>
        <description>Internal field to help create objects based on Template Configurations</description>
        <externalId>true</externalId>
        <label>Template Config Ext ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UNITY_Template_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UNITY_Template_Configuration__c.UNITY_Template_Parent__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>UNITY_Template_Configuration__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Proposal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UNITY_Template_Configuration__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Adjustments__c</fullName>
        <description>Collects all the adjustments on the master quote</description>
        <label>Total Adjustments</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Case_Price__c</fullName>
        <formula>UNITY_Master_Quote_Total_Price__c + 
UNITY_Total_Adjustments__c + 
UNITY_Total_Estimated_Sales_Tax__c + 
UNITY_Service_Charge__c + 
UNITY_Service_Charge_Tax__c + 
UNITY_Incurred_Charges__c + 
UNITY_Estimated_Incurred_Sales_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quote Total Price +
Total Adjustments +
Total Estimated Sales Tax + 
Service Charge + 
Service Charge Tax +
Incurred Charges + 
Estimated Incurred Sales Tax</inlineHelpText>
        <label>Total Case Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Cost__c</fullName>
        <label>Total Cost</label>
        <summarizedField>UNITY_Proposal_Line_Item__c.UNITY_Total_Cost__c</summarizedField>
        <summaryForeignKey>UNITY_Proposal_Line_Item__c.UNITY_Proposal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Estimated_Sales_Tax__c</fullName>
        <description>The total estimated sales tax on the master quote</description>
        <label>Total Estimated Sales Tax</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Price__c</fullName>
        <label>Total Price (without Adjustments or Tax)</label>
        <summarizedField>UNITY_Proposal_Line_Item__c.UNITY_Total_Price__c</summarizedField>
        <summaryForeignKey>UNITY_Proposal_Line_Item__c.UNITY_Proposal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Price_with_Service_Charge__c</fullName>
        <label>Total Price with Service Charge</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Quote_Margin__c</fullName>
        <formula>((UNITY_Total_Revenue__c-(UNITY_Master_Quote_Total_Cost__c + UNITY_Incurred_Cost__c))/
UNITY_Total_Revenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Quote Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Revenue__c</fullName>
        <formula>UNITY_Master_Quote_Total_Price__c +
UNITY_Total_Adjustments__c +
UNITY_Service_Charge__c +
UNITY_Incurred_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Vendor_Supplied_Dis_Price__c</fullName>
        <description>Total Discounted Price of all vendor supplied line items only</description>
        <label>Vendor Supplied Discounted Price</label>
        <summarizedField>UNITY_Proposal_Line_Item__c.UNITY_Discounted_Price__c</summarizedField>
        <summaryFilterItems>
            <field>UNITY_Proposal_Line_Item__c.UNITY_Is_Vendor_Supply__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>UNITY_Proposal_Line_Item__c.UNITY_Proposal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Vendor_Supplied_Final_Price__c</fullName>
        <description>Takes the total vendor supplied price from all quote lines (with discount)  and COMBINES with the quote total discount
Izay: Removed Estimated Tax from Formula</description>
        <formula>IF(
AND(NOT(ISBLANK(UNITY_Discount__c)),UNITY_Discount__c&gt;0), 
(1-UNITY_Discount__c)*UNITY_Total_Vendor_Supplied_Dis_Price__c,
UNITY_Total_Vendor_Supplied_Dis_Price__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Supplied Final Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Miner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Vendor)</relationshipLabel>
        <relationshipName>Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Work_Order_Type__c</fullName>
        <formula>UNITY_Work_Order__r.UNITY_Order_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>